@@ -231,6 +231,7 @@ GDBAgent::GDBAgent (XtAppContext app_context,
       _has_err_redirection(tp == GDB || tp == DBX || tp == XDB),
       _has_givenfile_command(false),
       _has_cont_sig_command(false),
+      _has_examine_command(tp == GDB || tp == DBX),
       _program_language(tp == JDB ? LANGUAGE_JAVA : LANGUAGE_C),
       _verbatim(false),
       _recording(false),
@@ -307,6 +308,7 @@ GDBAgent::GDBAgent(const GDBAgent& gdb)
       _has_err_redirection(gdb.has_err_redirection()),
       _has_givenfile_command(gdb.has_givenfile_command()),
       _has_cont_sig_command(gdb.has_cont_sig_command()),
+      _has_examine_command(gdb.has_examine_command()),
       _program_language(gdb.program_language()),
       _verbatim(gdb.verbatim()),
       _recording(gdb.recording()),
